Fix jenkinsfile with correct topics in staging, remove unicode chars (#83)
