# docs/swagger.yaml
@@ -11,9 +11,9 @@ definitions:
         type: number
       dist_solicitud_eod:
         type: number
-      dist_vacio_eod:
+      dist_vacio:
         type: number
-      dist_vacío:
+      dist_vacio_eod:
         type: number
       fecha:
         type: string
@@ -59,8 +59,6 @@ definitions:
         type: integer
       edad:
         type: string
-      fecha_produccion:
-        type: string
       genero:
         type: integer
       horas_conectado:
@@ -92,7 +90,7 @@ definitions:
         type: string
       tiempo_viaje:
         type: string
-      ubicación:
+      ubicacion:
         type: string
     type: object
 info:
